[gd_scene load_steps=2 format=3 uid="uid://basulkap5hnh8"]

[ext_resource type="Script" path="res://scripts/results_screen.gd" id="1_frax8"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_frax8")

[node name="FinalTimerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 404.0
offset_top = 163.0
offset_right = 624.0
offset_bottom = 186.0

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 323.0
offset_right = 660.0
offset_bottom = 434.0
text = "BACK TO MAIN MENU"

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
